fix popup visibility + working on styling

--- a/app/styles/mobile.css
+++ b/app/styles/mobile.css
@@ -291,7 +291,7 @@ will be correctly compiled during `gulp serve` and `gulp`
   border-top: 5px solid white;
   height: 70px;
   width: 100%;
-  background-color: #ffcc00  ;
+  background-color: #ffcc00;
 }
 
 #mobileSearch{
@@ -1163,9 +1163,7 @@ div#stuRCard{
 }
 
 /*popup css*/
-div.popup{
-  display: none;
-}
+
 
 .generalHover{
   height: 80px;
@@ -1342,4 +1340,351 @@ p.parkingTextHover{
   position: relative;
   top: -10px;
   float: right;
+}
+
+/*overlay + info popup styling*/
+#overlay{
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  z-index: 1;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.popup{
+  visibility: hidden;
+  opacity: 0;
+  position: fixed;
+  width: 100%;
+  /*height: 420px;*/
+  background-color: white;
+  color: black;
+  z-index: 5;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+}
+/*specific popup modifications*/
+
+#pollockPopup{
+  height: 380px;
+}
+#donnerPopup{
+  height: 400px;
+}
+#fletcherPopup, #oviattPopup{
+  height: 430px;
+}
+#dempseyPopup{
+  height: 440px;
+}
+#taylorPopup, #parkingRampPopup, #blackhawkPopup{
+  height: 445px;
+}
+#acPopup, #reevePopup{
+  height: 450px;
+}
+#successPopup{
+  height: 490px;
+}
+#horizonPopup{
+  height: 515px;
+}
+
+/*popup stuff continued*/
+.popupBlack{
+  background-color: #fdb515;
+  position: relative;
+  width: 100%;
+  height: 100px;
+
+}
+h1.text.yellow{
+  position: relative;
+  top: 50%;
+  left: 10px;
+  font-size: 2em;
+}
+
+.popupNav{
+  background-color:  #ffcc00 ;
+  position: relative;
+  top: -10px;
+  width: 100%;
+  height: 30px;
+}
+ul#popupNav {
+  margin: 0px;
+  padding: 0px;
+}
+ul#popupNav li{
+  position: relative;
+  display: inline;
+  padding-left: 40px;
+  color: #444;
+  font-family: 'Open Sans', sans-serif;
+  line-height: 2em;
+}
+ul#popupNav li.about{
+  padding-left: 20px;
+}
+ul#popupNav li:hover{
+  text-decoration: underline;
+}
+li:hover{
+cursor: pointer;
+}
+.closeButton{
+  float: right;
+  margin: 20px;
+}
+.popupText{
+position: relative;
+left: 50%;
+  width: 300px;
+  text-align: center;
+}
+.heading{
+  margin: 0px;
+  font-family: "open-sans", sans-serif;
+}
+.imagePopup{
+
+}
+.imagePopup img{
+  width: 400px;
+  height: 250px;
+  position: relative;
+  left: 30%;
+
+}
+#parkingRampParkingImage img{
+  width: auto;
+  height: auto;
+  margin-left: 65%;
+}
+.videoPopup{
+  float: right;
+}
+.address{
+  text-align: center;
+  margin: 0px;
+}
+a.address{
+  position: relative;
+  left: 40%;
+}
+.videoPopup iframe{
+  width: 400px;
+  height: 250px;
+}
+.tourText{
+  width: 300px;
+  float: left;
+}
+.sustHeading{
+  margin: 0px;
+  font-family: "open-sans", sans-serif;
+  position: relative;
+
+}
+.subText{
+  position: relative;
+  padding-top: 10px;
+  margin-bottom: 0px;
+}
+
+/*reeve dining padding*/
+#reeveDiningText p{
+  margin-bottom: 4px;
+}
+#reeveDiningImage ul{
+  padding: 0px;
+  margin: 0px;
+  margin-left: 10px;
+  text-align: center;
+}
+#reeveDiningImage li{
+  position: relative;
+  display: inline;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 12px;
+  display: inline-block;
+  line-height: 1em;
+
+}
+#reeveDiningImage a{
+  text-decoration-line: none;
+}
+#reeveDiningImage a:hover{
+  text-decoration-line: underline;
+}
+
+/*blackhawk list styling*/
+#blackhawkDiningText ul{
+  margin: 0px;
+  padding: 0px;
+
+}
+#blackhawkDiningText li{
+  margin: 0px;
+  padding: 0px;
+  padding-left: 20px;
+  text-indent: -15px;
+  list-style-type: circle;
+  list-style-position: inside;
+}
+#blackhawkDiningText p{
+  margin: 0px;
+  padding: 0px;
+}
+
+/*styling for popup tabs*/
+#albeeTourVideo{
+  display: none;
+}
+#albeeTourText{
+  display: none;
+}
+#albeeSustainability{
+  display: none;
+}
+#alumniSustainability{
+  display: none;
+}
+#acBathrooms{
+  display: none;
+}
+#blackhawkSustainability{
+  display: none;
+}
+#blackhawkBathrooms{
+  display: none;
+}
+#blackhawkDiningImage{
+  display: none;
+}
+#blackhawkDiningText{
+  display: none;
+}
+#clowDiningImage{
+  display: none;
+}
+#clowDiningText{
+  display: none;
+}
+#equityBathrooms{
+  display: none;
+}
+#dempseyBathrooms{
+  display: none;
+}
+#halseyBathrooms{
+  display: none;
+}
+#halseyDiningImage{
+  display: none;
+}
+#halseyDiningText{
+  display: none;
+}
+#harringtonBathrooms{
+  display: none;
+}
+#heatingSustainability{
+  display: none;
+}
+#parkingRampParkingImage{
+  display: none;
+}
+#parkingRampParkingText{
+  display: none;
+}
+#horizonSustainability{
+  display: none;
+}
+#kolfBathrooms{
+  display: none;
+}
+#nursingBathrooms{
+  display: none;
+}
+#polkTourText{
+  display: none;
+}
+#polkTourVideo{
+  display: none;
+}
+#reeveTourText{
+  display: none;
+}
+#reeveTourVideo{
+  display: none;
+}
+#reeveSustainability{
+  display: none;
+}
+#reeveBathrooms{
+  display: none;
+}
+#reeveDiningImage{
+  display: none;
+}
+#reeveDiningText{
+  display: none;
+}
+#sageTourText{
+  display: none;
+}
+#sageTourVideo{
+  display: none;
+}
+#sageSustainability{
+  display: none;
+}
+#sageBathrooms{
+  display: none;
+}
+#sageDiningImage{
+  display: none;
+}
+#sageDiningText{
+  display: none;
+}
+#scottDiningImage{
+  display: none;
+}
+#scottDiningText{
+  display: none;
+}
+#recreationSustainability{
+  display: none;
+}
+#recreationBathrooms{
+  display: none;
+}
+#successTourText{
+  display: none;
+}
+#successTourVideo{
+  display: none;
+}
+#successSustainability{
+  display: none;
+}
+#successBathrooms{
+  display: none;
+}
+#swartBathrooms{
+  display: none;
+}
+#taylorSustainability{
+  display: none;
+}
+#titanSustainability{
+  display: none;
+}
+#policeBathrooms{
+  display: none;
 }
